--- a/config/database.yml
+++ b/config/database.yml
@@ -89,7 +89,8 @@ default: &default
   host: db
   username: postgres
   password:
-  pool: 5
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  url: <%= ENV['DATABASE_URL'] %>
 
 development:
   <<: *default
